--- a/src/app/pages/main/settings/privacy/change-password/change-password.component.html
+++ b/src/app/pages/main/settings/privacy/change-password/change-password.component.html
@@ -8,16 +8,35 @@
         <div class="grid formgrid">
             <div class="col-12 py-2 sm:col-4">
                 <label for="oldPassword" class="w-full sm:w-auto">Old Password</label>
-                <input pInputText id="oldPassword" placeholder="Enter Old Password" class="w-full mt-2" [(ngModel)]="resetPasswordObj.oldPassword" autocomplete="off" />
-            </div>
-            <div class="col-12 py-2 sm:col-4">
+                <p-iconField iconPosition="right">
+                  <input id="oldPassword" placeholder="Enter Old Password" class="w-full mt-2" required 
+                    [type]="isOldPasswordToggled ? 'text' : 'password'" [(ngModel)]="resetPasswordObj.oldPassword" pInputText
+                    (copy)="disableEvent($event)" (paste)="disableEvent($event)" (cut)="disableEvent($event)">
+                  <p-inputIcon (click)="toggleOldPassword()" [styleClass]="isOldPasswordToggled ? 'pi pi-eye-slash cursor-pointer' : 'pi pi-eye cursor-pointer'" />
+                </p-iconField>
+              </div>
+              
+              <div class="col-12 py-2 sm:col-4">
                 <label for="newPassword" class="w-full sm:w-auto">New Password</label>
-                <input pInputText id="newPassword" placeholder="Enter New Password" class="w-full mt-2" [(ngModel)]="resetPasswordObj.newPassword" autocomplete="off" />
-            </div>
-            <div class="col-12 py-2 sm:col-4">
+                <p-iconField iconPosition="right">
+                  <input id="newPassword" placeholder="Enter New Password" class="w-full mt-2" required 
+                    [type]="isNewPasswordToggled ? 'text' : 'password'" [(ngModel)]="resetPasswordObj.newPassword" pInputText
+                    (copy)="disableEvent($event)" (paste)="disableEvent($event)" (cut)="disableEvent($event)">
+                  <p-inputIcon (click)="toggleNewPassword()" [styleClass]="isNewPasswordToggled ? 'pi pi-eye-slash cursor-pointer' : 'pi pi-eye cursor-pointer'" />
+                </p-iconField>
+              </div>
+              
+              <div class="col-12 py-2 sm:col-4">
                 <label for="confirmPassword" class="w-full sm:w-auto">Confirm New Password</label>
-                <input pInputText id="newPassword" placeholder="Re-enter New Password" class="w-full mt-2" [(ngModel)]="confirmNewPassword" autocomplete="off" />
-            </div>
+                <p-iconField iconPosition="right">
+                  <input id="confirmPassword" placeholder="Re-enter New Password" class="w-full mt-2" required 
+                    [type]="isConfirmPasswordToggled ? 'text' : 'password'" [(ngModel)]="confirmNewPassword" pInputText
+                    (copy)="disableEvent($event)" (paste)="disableEvent($event)" (cut)="disableEvent($event)">
+                  <p-inputIcon (click)="toggleConfirmPassword()" [styleClass]="isConfirmPasswordToggled ? 'pi pi-eye-slash cursor-pointer' : 'pi pi-eye cursor-pointer'" />
+                </p-iconField>
+              </div>
+              
+              
         </div>
        </ng-template>
 
