--- a/src/app/shared/components/generic-table/generic-table.component.html
+++ b/src/app/shared/components/generic-table/generic-table.component.html
@@ -10,9 +10,20 @@
                 <input pInputText placeholder="Search" (input)="onSearch($event)" />
             </span>
         </div>
-        <!-- <div class="p-toolbar-group-end">
-            <p-button label="Save" icon="pi pi-check" />
-        </div> -->
+        <div class="p-toolbar-group-end">
+            @if(toolbarRightActions.length) {
+                @for (action of toolbarRightActions; track $index) {
+                    @if(action.type === 'button') {
+                        <p-button label="Save" icon="pi pi-check" />
+                    }
+
+                    @if(action.type === 'dropdown') {
+                        <p-dropdown [options]="action.options" (onChange)="onDropdownChange($event)" 
+                            [optionLabel]="action.dropdownKeys.nameKey" [placeholder]="action.placeholder" />
+                    }
+                }
+            }
+        </div>
     </p-toolbar>
 
 
