--- a/src/app/pages/main/management/dynamic-user/dynamic-user.component.html
+++ b/src/app/pages/main/management/dynamic-user/dynamic-user.component.html
@@ -1,4 +1,4 @@
-<app-generic-table [data]="users" [columns]="columns" [rows]="10" [header]="userType" [isDataLoading]="isLoading"
+<app-generic-table [data]="users" [columns]="columns" [rows]="10" [header]="userType" [isDataLoading]="isLoading" [exportFilename]="userType"
     [globalFilterFields]="['orgName','name','email','loginId','mobileNo']" (edit)="onEditProduct($event)"
     (delete)="onDeleteProduct($event)" (selectionChange)="onSelectionChange($event)" (new)="openNew($event)" />
 
