--- a/src/app/pages/main/management/state/state.component.html
+++ b/src/app/pages/main/management/state/state.component.html
@@ -1,5 +1,5 @@
 <app-generic-table [data]="states" [columns]="columns" [rows]="10" [header]="'States'" [isDataLoading]="isLoading"
-    [globalFilterFields]="['statecode','statename']" (edit)="onEditState($event)" (delete)="onDeleteProduct($event)"
+   [exportFilename]="'states'" [globalFilterFields]="['statecode','statename']" (edit)="onEditState($event)" (delete)="onDeleteProduct($event)"
     (selectionChange)="onSelectionChange($event)" (new)="openNew($event)" />
 
 
