--- a/src/styles.scss
+++ b/src/styles.scss
@@ -57,4 +57,16 @@
 * {
     scrollbar-width: thin; /* Thin scrollbar */
     scrollbar-color: #888 #f1f1f1; /* Thumb and track colors */
+    box-sizing: border-box;
+}
+
+html {
+  height: 100%;
+  font-size: 12px;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  min-height: 100%;
 }
