--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-    <p-menubar [model]="items">
+    <p-menubar [model]="menuItems">
         <ng-template pTemplate="start">
             <p-avatar image="assets/images/logo.png" styleClass="mr-2" size="large" />
         </ng-template>
