--- a/src/app/pages/main/management/state/state.component.html
+++ b/src/app/pages/main/management/state/state.component.html
@@ -3,6 +3,6 @@
     (selectionChange)="onSelectionChange($event)" (new)="openNew($event)" />
 
 
-<app-generic-dialog [visible]="stateDialog" [header]="'States'" [width]="'800px'" [modal]="true" [isEditing]="isEditing"
-    [styleClass]="'p-fluid'" [fields]="fields" [data]="state" (onHide)="onHideDialog($event)"
+<app-generic-dialog [visible]="stateDialog" [header]="'States'" [width]="'600px'" [modal]="true" [isEditing]="isEditing"
+    [styleClass]="''" [fields]="fields" [data]="state" (onHide)="onHideDialog($event)"
     (onSave)="onSaveProduct($event)" (onInputTextChange)="onInputTextChange($event)" />
