--- a/src/app/pages/main/management/sim-provider/sim-provider.component.html
+++ b/src/app/pages/main/management/sim-provider/sim-provider.component.html
@@ -3,6 +3,6 @@
     (selectionChange)="onSelectionChange($event)" (new)="openNew($event)" />
 
 
-<app-generic-dialog [visible]="providerDialog" [header]="'Sim Providers'" [width]="'800px'" [modal]="true" [isEditing]="isEditing"
-    [styleClass]="'p-fluid'" [fields]="fields" [data]="provider" (onHide)="onHideDialog($event)"
+<app-generic-dialog [visible]="providerDialog" [header]="'Sim Providers'" [width]="'400px'" [modal]="true" [isEditing]="isEditing"
+    [styleClass]="''" [fields]="fields" [data]="provider" (onHide)="onHideDialog($event)"
     (onSave)="onSaveProvider($event)" (onInputTextChange)="onInputTextChange($event)" />
