--- a/src/app/pages/main/management/state/state.component.html
+++ b/src/app/pages/main/management/state/state.component.html
@@ -4,5 +4,5 @@
 
 
 <app-generic-dialog [visible]="stateDialog" [header]="'States'" [width]="'600px'" [modal]="true" [isEditing]="isEditing"
-    [styleClass]="''" [fields]="fields" [data]="state" (onHide)="onHideDialog($event)"
+    [styleClass]="'p-fluid'" [fields]="fields" [data]="state" (onHide)="onHideDialog($event)"
     (onSave)="onSaveProduct($event)" (onInputTextChange)="onInputTextChange($event)" />
