--- a/src/app/pages/main/management/device/device-list/device-list.component.html
+++ b/src/app/pages/main/management/device/device-list/device-list.component.html
@@ -1,24 +1,8 @@
-<!-- <div class="px-4 md:px-6 lg:px-8"> -->
-    <!-- <p-toolbar styleClass="mb-4 gap-2">
-        <ng-template pTemplate="left">
-            <p-button severity="danger" label="Delete" icon="pi pi-trash" (onClick)="deleteSelectedProducts()"
-                [disabled]="!selectedDevices || !selectedDevices.length" />
-        </ng-template>
-
-        <ng-template pTemplate="right">
-            <p-fileUpload mode="basic" accept="image/*" [maxFileSize]="1000000" label="Import" chooseLabel="Import"
-                class="mr-2 inline-block" />
-            <p-button severity="help" label="Export" icon="pi pi-upload" />
-        </ng-template>
-    </p-toolbar> -->
-
-    <app-generic-table [data]="devices" [columns]="columns" [rows]="10" [header]="'Device Details'"
-        [globalFilterFields]="['imei']" (edit)="onEditProduct($event)"
-        (delete)="onDeleteProduct($event)" (selectionChange)="onSelectionChange($event)"></app-generic-table>
-
-<!-- </div> -->
+<app-generic-table [data]="devices" [columns]="columns" [rows]="10" [header]="'Sim Providers'" [isDataLoading]="isLoading" [actions]="['edit','delete']"
+   [exportFilename]="'Device'" [globalFilterFields]="[]" (edit)="onEditDevice($event)" (delete)="onDeleteDevice($event)"
+    (selectionChange)="onSelectionChange($event)" (new)="openNew($event)" />
 
 
-<app-generic-dialog [visible]="dealerDialog" [header]="'Device Details'" [width]="'450px'" [modal]="true"
+<app-generic-dialog [visible]="deviceDialog" [header]="'Device'" [width]="'600px'" [modal]="true" [isEditing]="isEditing"
     [styleClass]="'p-fluid'" [fields]="fields" [data]="device" (onHide)="onHideDialog($event)"
-    (onSave)="onSaveProduct($event)" />
+    (onSave)="onSaveDevice($event)" (onInputTextChange)="onInputTextChange($event)" />
