--- a/src/app/pages/main/management/device/device-list/device-list.component.html
+++ b/src/app/pages/main/management/device/device-list/device-list.component.html
@@ -1,4 +1,4 @@
-<app-generic-table [data]="devices" [columns]="columns" [rows]="10" [header]="'Sim Providers'" [isDataLoading]="isLoading" [actions]="['edit','delete']"
+<app-generic-table [data]="devices" [columns]="columns" [rows]="10" [header]="'Sim Providers'" [isDataLoading]="isLoading" [actions]="['edit']"
    [exportFilename]="'Device'" [globalFilterFields]="[]" (edit)="onEditDevice($event)" (delete)="onDeleteDevice($event)"
     (selectionChange)="onSelectionChange($event)" (new)="openNew($event)" />
 
