--- a/src/app/shared/components/generic-table/generic-table.component.html
+++ b/src/app/shared/components/generic-table/generic-table.component.html
@@ -43,7 +43,9 @@
                     {{ col.header }} <p-sortIcon field="{{ col.field }}"></p-sortIcon>
                 </th>
                 }
-                <th pFrozenColumn alignFrozen="right" [frozen]="true">Actions</th>
+                @if(actions.length) {
+                    <th pFrozenColumn alignFrozen="right" [frozen]="actions.length > 0">Actions</th>
+                }
             </tr>
         </ng-template>
 
@@ -60,17 +62,21 @@
                          <td>{{item[col.field] || '-'}}</td>
                     }
                 }
-                <td pFrozenColumn alignFrozen="right" [frozen]="true">
+                @if(actions.length) {
+                <td pFrozenColumn alignFrozen="right" [frozen]="actions.length > 0">
                     @for(action of actions; track $index) {
-                        @if(action === 'edit') {
-                            <i [pTooltip]="'Edit'" tooltipPosition="bottom" (click)="onEdit(item)" class="pi pi-pencil ml-2 text-sm text-primary cursor-pointer"></i>
-                        }
-
-                        @if(action === 'delete') {
-                            <i [pTooltip]="'Delete'" tooltipPosition="bottom" (click)="onDelete($event,item)" class="pi pi-trash ml-4 text-sm text-red-500 cursor-pointer"></i>
-                        }
+                    @if(action === 'edit') {
+                    <i [pTooltip]="'Edit'" tooltipPosition="bottom" (click)="onEdit(item)"
+                        class="pi pi-pencil ml-2 text-sm text-primary cursor-pointer"></i>
+                    }
+                
+                    @if(action === 'delete') {
+                    <i [pTooltip]="'Delete'" tooltipPosition="bottom" (click)="onDelete($event,item)"
+                        class="pi pi-trash ml-4 text-sm text-red-500 cursor-pointer"></i>
+                    }
                     }
                 </td>
+                }
             </tr>
         </ng-template>
 
