--- a/src/app/pages/main/management/dynamic-user/dynamic-user.component.html
+++ b/src/app/pages/main/management/dynamic-user/dynamic-user.component.html
@@ -1,5 +1,5 @@
 <app-generic-table [data]="users" [columns]="columns" [rows]="10" [header]="userType" [isDataLoading]="isLoading" [exportFilename]="userType"
-    [globalFilterFields]="['orgName','name','email','loginId','mobileNo']" (edit)="onEditProduct($event)"
+    [globalFilterFields]="['orgName','name','email','loginId','mobileNo']" (edit)="onEditProduct($event)" [selection]="selectedUsers" [selectionMode]="userType === 'Dealer' ? 'single' : 'multiple'"
     (delete)="onDeleteProduct($event)" (selectionChange)="onSelectionChange($event)" (new)="openNew($event)" />
 
 <app-generic-dialog [isValidated]="isValidated" [visible]="userDialog" [header]="userType" [width]="'800px'"
