--- a/src/app/shared/components/generic-table/generic-table.component.html
+++ b/src/app/shared/components/generic-table/generic-table.component.html
@@ -2,7 +2,7 @@
     <p-toolbar styleClass="bg-primary-reverse border-bottom-none border-noround">
         <div class="p-toolbar-group-start">
             <p-button [pTooltip]="'Create New'" tooltipPosition="bottom" [text]="true" [outlined]="true" icon="pi pi-plus" class="mr-2" (onClick)="onNewUser()" />
-            <p-button [pTooltip]="'Link RTO'" tooltipPosition="bottom" [text]="true" [outlined]="true" icon="pi pi-link" class="mr-2" (onClick)="onLinkRTO()" />
+            <p-button [disabled]="selectionMode === 'single' ? !selection : !selection.length" [pTooltip]="'Link RTO'" tooltipPosition="bottom" [text]="true" [outlined]="true" icon="pi pi-link" class="mr-2" (onClick)="onLinkRTO()" />
             <p-button [pTooltip]="'Export CSV'" tooltipPosition="bottom" [text]="true" [outlined]="true" icon="pi pi-print" (onClick)="onPrint()" />
         </div>
         <div class="p-toolbar-group-center">
@@ -38,7 +38,11 @@
         <!-- Dynamic Columns -->
         <ng-template pTemplate="header">
             <tr>
-                <th pFrozenColumn style="width: 4rem"><p-tableHeaderCheckbox></p-tableHeaderCheckbox></th>
+                <th pFrozenColumn style="width: 4rem">
+                    @if(selectionMode === 'multiple') {
+                        <p-tableHeaderCheckbox/>
+                    }
+                </th>
                 @for (col of columns; track $index) {
                 <th pSortableColumn="{{ col.field }}" [style.minWidth]="col.minWidth || '15rem'">
                     {{ col.header }} <p-sortIcon field="{{ col.field }}"></p-sortIcon>
@@ -52,7 +56,13 @@
 
         <ng-template pTemplate="body" let-item>
             <tr>
-                <td pFrozenColumn><p-tableCheckbox [value]="item"></p-tableCheckbox></td>
+                <td pFrozenColumn>
+                    @if(selectionMode === 'multiple') {
+                        <p-tableCheckbox [value]="item"/>
+                    } @else {
+                        <p-tableRadioButton [value]="item" />
+                    }
+                </td>
                 @for (col of columns; track $index) {
                     @if(col.field === 'active'){
                         <td>
