--- a/src/app/pages/main/management/device-model/device-model.component.html
+++ b/src/app/pages/main/management/device-model/device-model.component.html
@@ -1,5 +1,6 @@
 <app-generic-table [data]="deviceModels" [columns]="columns" [rows]="10" [header]="'Sim Providers'" [isDataLoading]="isLoading" [actions]="[]"
-   [exportFilename]="'Device Model'" [globalFilterFields]="[]" (edit)="onEditDeviceModel($event)" (delete)="onDeleteDeviceModel($event)"
+[toolbarRightActions]="toolbarRightActions" [exportFilename]="'Device Model'" [globalFilterFields]="[]"
+     (edit)="onEditDeviceModel($event)" (delete)="onDeleteDeviceModel($event)" (dropdown)="onToolBarDropDownChange($event)"
     (selectionChange)="onSelectionChange($event)" (new)="openNew($event)" />
 
 
