--- a/src/app/pages/main/management/dynamic-user/dynamic-user.component.html
+++ b/src/app/pages/main/management/dynamic-user/dynamic-user.component.html
@@ -1,8 +1,8 @@
 <app-generic-table [data]="users" [columns]="columns" [rows]="10" [header]="userType" [isDataLoading]="isLoading" [exportFilename]="userType"
     [globalFilterFields]="['orgName','name','email','loginId','mobileNo']" (edit)="onEditProduct($event)" [selection]="selectedUsers" [selectionMode]="userType === 'Dealer' ? 'single' : 'multiple'"
-    (delete)="onDeleteProduct($event)" (selectionChange)="onSelectionChange($event)" (new)="openNew($event)" />
+    (delete)="onDeleteProduct($event)" (selectionChange)="onSelectionChange($event)" (new)="openNew($event)" (linkRTO)="onLinkRTO($event)" />
 
 <app-generic-dialog [isValidated]="isValidated" [visible]="userDialog" [header]="userType" [width]="'800px'"
     [modal]="true" [isEditing]="isEditing" [hideFields]="hideFields" [styleClass]="'p-fluid'" [fields]="fields"
     [data]="user" [validationState]="validationState" (onHide)="onHideDialog($event)" (onSave)="onSaveProduct($event)"
-    (onInputTextChange)="onInputTextChange($event)" />
+    (onInputTextChange)="onInputTextChange($event)" (onDialogDropdownChange)="onDialogDropDownChange($event)" />
